# taskify-ai

./: .env.example  .gitignore  MILESTONES.md  Makefile  README.md  docker-compose.yml  start.sh
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_users_and_task_ownership.py  003_task_embeddings.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  errors.py  main.py  security.py
backend/app/agent/: __init__.py  context.py  dates.py  graph.py  prompts.py  sessions.py  thinking.py  tools.py
backend/app/models/: __init__.py  task.py  user.py
backend/app/routers/: agent.py  auth.py  tasks.py
backend/app/schemas/: __init__.py  agent.py  auth.py  task.py
backend/app/services/: __init__.py  agent_service.py  embedding.py  task_service.py  user_service.py
backend/tests/: conftest.py  test_agent_service.py  test_agent_tools.py  test_auth.py  test_dates.py  test_tasks.py  test_thinking.py  test_tools_milestone.py
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: AuthGate.tsx  ChatPanel.tsx  Header.tsx  TaskCard.tsx  TaskDetailPanel.tsx  TaskForm.tsx  TaskList.tsx
frontend/src/lib/: api.ts  taskStyles.ts
frontend/src/store/: authStore.ts  taskStore.ts
frontend/src/types/: index.ts
(+7 files in other folders)
