[project]
name = "taskify-backend"
version = "0.1.0"
description = "Taskify backend — FastAPI + SQLAlchemy + LangGraph agent over Ollama"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E402"]
"alembic/versions/*" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-q"
